--- a/designer-fight.html
+++ b/designer-fight.html
@@ -7,7 +7,6 @@
     <link rel="icon" type="image/x-icon" href="media/jingan-icon.svg">
 
     <!-- metas -->
-    <link rel="icon" type="image/x-icon" href="media/jingan-icon.svg">
     <meta name="description" content="Explore Jing-An Chen's diverse portfolio showcasing design, animation, photography, and web development expertise.">
     <meta name="keywords" content="design, animation, photography, web development, Broccoli Design, Jing-An Chen, portfolio">
     <meta name="author" content="Jing-An Chen">
@@ -49,12 +48,9 @@
             </g>
         </svg>
     </div>
-    <!-- <div id="useSkill">
-        <svg id="broccoliSkillUse" viewBox="0 0 1920 1080"></svg>
-    </div> -->
     <!-- see vueBroccmon -->
-    <svg id="broccoliSkillUse" viewBox="0 0 1920 1080"></svg>
-    <svg id="happyClient" viewBox="0 0 1920 1080"></svg>
+    <svg id="broccoliSkillUse" class="broccoliCG" viewBox="0 0 1920 1080"></svg>
+    <svg id="happyClient" class="clientCG" viewBox="0 0 1920 1080"></svg>
     <header class="d-flex align-items-center animate__animated animate__slideInDown">
         <h1>Look! A Stubborn Client is there!</h1>
     </header>
@@ -111,9 +107,9 @@
         <!-- vue -->
         <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
         <!-- bcoccoli codes -->
-        <script src="js/vueBroccmon.js"></script>
         <script src="js/route.js"></script>
         <script src="js/fight.js"></script>
+        <script src="js/vueBroccmon.js"></script>
     </footer>
     
 </body>
