--- a/developer.html
+++ b/developer.html
@@ -197,22 +197,22 @@
                 <p>If being full-stack means a developer can handle front-end and back-end development, then Jing-An goes beyond that. He excels in design, front-end, back-end, and digital marketing simultaneously. With an insatiable thirst for knowledge throughout his career, Jing-An's energy makes him the best support for all his coworkers.</p>
                 <div class="images row justify-content-center">
                     <picture class="col-3">
-                        <source media="(min-width: 650px)" srcset="media/other5/other_5.jpg">
-                        <source media="(min-width: 465px)" srcset="media/other5/other_5_m.jpg">
+                        <source media="(max-width: 650px)" srcset="media/other5/other_5_m.jpg">
+                        <source media="(max-width: 465px)" srcset="media/other5/other_5_m.jpg, media/other5/other_5_s.jpg">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/other5/other_5_s.jpg" alt="">
+                            src="media/other5/other_5.jpg" alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(min-width: 650px)" srcset="media/other6/other_6.jpg">
-                        <source media="(min-width: 465px)" srcset="media/other6/other_6_m.jpg">
+                        <source media="(max-width: 650px)" srcset="media/other6/other_6_m.jpg">
+                        <source media="(max-width: 465px)" srcset="media/other6/other_6_m.jpg, media/other6/other_6_s.jpg">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/other6/other_6_s.jpg" alt="">
+                            src="media/other6/other_6.jpg" alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(min-width: 650px)" srcset="media/figma/figma.png">
-                        <source media="(min-width: 465px)" srcset="media/figma/figma_m.png">
+                        <source media="(min-width: 650px)" srcset="media/figma/figma_m.png">
+                        <source media="(min-width: 465px)" srcset="media/figma/figma_m.png, media/figma/figma_s.png">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/figma/figma_s.png" alt="">
+                            src="media/figma/figma.png" alt="">
                     </picture>
                 </div>
             </div>
@@ -223,22 +223,22 @@
                 <p>Throughout Jing-An's career, startup companies unequivocally endorse him. He leverages his design expertise to assist startup owners in clarifying their positions and niches in the market. With his robust development skills, he customizes the most suitable brand websites for each client. This unique advantage positions Jing-An not only as a web developer but also as a brand maker. </p>
                 <div class="images row justify-content-center">
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/other13/other_13.jpg">
-                        <source media="(max-width: 465px)" srcset="media/other13/other_13_m.jpg">
+                        <source media="(max-width: 650px)" srcset="media/other13/other_13_m.jpg">
+                        <source media="(max-width: 465px)" srcset="media/other13/other_13_s.jpg">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/other13/other_13_s.jpg" alt="">
+                            src="media/other13/other_13.jpg" alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/other20/other_20.png">
-                        <source media="(max-width: 465px)" srcset="media/other20/other_20_m.png">
+                        <source media="(max-width: 650px)" srcset="media/other20/other_20_m.png">
+                        <source media="(max-width: 465px)" srcset="media/other20/other_20_s.png">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/other20/other_20_s.png" alt="">
+                            src="media/other20/other_20.png" alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/other21/other_21.png">
-                        <source media="(max-width: 465px)" srcset="media/other21/other_21_m.png">
+                        <source media="(max-width: 650px)" srcset="media/other21/other_21_m.png">
+                        <source media="(max-width: 465px)" srcset="media/other21/other_21_s.png">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/other21/other_21_s.png" alt="">
+                            src="media/other21/other_21.png" alt="">
                     </picture>
                 </div>
             </div>
@@ -249,22 +249,22 @@
                 <p>During Jing-An's university days, he came across an article by industrial designer Richard Sapper, which greatly influenced him. From that point on, Jing-An became a designer who emphasized the interaction between users and products. Combining this focus with his personal hobby of comedy, Jing-An developed a motto: 'When it comes to design, humor matters.' He believes that a good design is akin to a good joke—people can engage with it, enjoy it repeatedly, and ideally, discover new experiences with each interaction. This perspective led Jing-An into the world of web design, as he sees websites as the ultimate interactive product that people can play with.</p>
                 <div class="images row justify-content-center">
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/other3/other_3.jpg">
-                        <source media="(max-width: 465px)" srcset="media/other3/other_3_m.jpg">
+                        <source media="(max-width: 650px)" srcset="media/other3/other_3_m.jpg">
+                        <source media="(max-width: 465px)" srcset="media/other3/other_3_s.jpg">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/other3/other_3_s.jpg" alt="">
+                            src="media/other3/other_3.jpg" alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/m19co/m19co.png">
-                        <source media="(max-width: 465px)" srcset="media/m19co/m19co_m.png">
+                        <source media="(max-width: 650px)" srcset="media/m19co/m19co_m.png">
+                        <source media="(max-width: 465px)" srcset="media/m19co/m19co_s.png">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/m19co/m19co_s.png" alt="">
+                            src="media/m19co/m19co.png" alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/m19bit/m19bit.png">
-                        <source media="(max-width: 465px)" srcset="media/m19bit/m19bit_m.png">
+                        <source media="(max-width: 650px)" srcset="media/m19bit/m19bit_m.png">
+                        <source media="(max-width: 465px)" srcset="media/m19bit/m19bit_s.png">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/m19bit/m19bit_s.png" alt="">
+                            src="media/m19bit/m19bit.png" alt="">
                     </picture>
                 </div>
             </div>
