--- a/photographer.html
+++ b/photographer.html
@@ -180,22 +180,22 @@
                 <p>Little did they know, Jing-An's first job was as a commercial photographer and social media manager for a disposable tableware firm called JFY Retailer. Despite limited resources—a cheap smartphone and basic tools—he transformed ordinary tableware into captivating commercial photos, marketing materials, and social media posts. Jing-An's success was undeniable! Today, he effortlessly creates stunning photos for any subject and continues to serve JFY Retailer as their contracted photographer. </p>
                 <div class="images row justify-content-center">
                     <picture class="col-3">
-                        <source media="(min-width: 650px)" srcset="media/sq56/sq_56.jpg">
-                        <source media="(min-width: 465px)" srcset="media/sq56/sq_56_m.jpg">
+                        <source media="(max-width: 650px)" srcset="media/sq56/sq_56_m.jpg">
+                        <source media="(max-width: 465px)" srcset="media/sq56/sq_56_s.jpg">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/sq56/sq_56_s.jpg" alt="">
+                            src="media/sq56/sq_56.jpg" alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(min-width: 650px)" srcset="media/sq24/sq_24.jpg">
-                        <source media="(min-width: 465px)" srcset="media/sq24/sq_24_m.jpg">
+                        <source media="(max-width: 650px)" srcset="media/sq24/sq_24_m.jpg">
+                        <source media="(max-width: 465px)" srcset="media/sq24/sq_24_s.jpg">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/sq24/sq_24_s.jpg" alt="">
+                            src="media/sq24/sq_24.jpg" alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(min-width: 650px)" srcset="media/sq22/sq_22.jpg">
-                        <source media="(min-width: 465px)" srcset="media/sq22/sq_22_m.jpg">
+                        <source media="(max-width: 650px)" srcset="media/sq22/sq_22_m.jpg">
+                        <source media="(max-width: 465px)" srcset="media/sq22/sq_22_s.jpg">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/sq22/sq_22_s.jpg" alt="">
+                            src="media/sq22/sq_22.jpg" alt="">
                     </picture>
                 </div>
             </div>
@@ -206,22 +206,22 @@
                 <p>Today, Jing-An is a successful photographer, capturing commercial photos for various firms such as Capital E, a Taiwanese bag retailer. Additionally, he volunteers as a photographer at Algonquin College, creating numerous photos and albums for various events. Jing-An also manages the Instagram account Ottawa Free Photos, offering free photo services for tourists in Ottawa.</p>
                 <div class="images row justify-content-center">
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/sq6/sq_6.jpg">
-                        <source media="(max-width: 465px)" srcset="media/sq6/sq_6_m.jpg">
+                        <source media="(max-width: 650px)" srcset="media/sq6/sq_6_m.jpg">
+                        <source media="(max-width: 465px)" srcset="media/sq6/sq_6_s.jpg">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/sq6/sq_6_s.jpg" alt="">
+                            src="media/sq6/sq_6.jpg" alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/sq4/sq_4.jpg">
-                        <source media="(max-width: 465px)" srcset="media/sq4/sq_4_m.jpg">
+                        <source media="(max-width: 650px)" srcset="media/sq4/sq_4_m.jpg">
+                        <source media="(max-width: 465px)" srcset="media/sq4/sq_4_s.jpg">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/sq4/sq_4_s.jpg" alt="">
+                            src="media/sq4/sq_4.jpg" alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/other22/other_22.png">
-                        <source media="(max-width: 465px)" srcset="media/other22/other_22_m.png">
+                        <source media="(max-width: 650px)" srcset="media/other22/other_22_m.png">
+                        <source media="(max-width: 465px)" srcset="media/other22/other_22_s.png">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/other22/other_22_s.png" alt="">
+                            src="media/other22/other_22.png" alt="">
                     </picture>
                 </div>
             </div>
@@ -232,22 +232,22 @@
                 <p>Jing-An's passion for cinema was ignited by his director aunt. He previously worked at an award-winning film firm in Taiwan called Green Film Production, where he contributed to various aspects of movie production, including artistic design, advertising, poster design, filming, and post-production. Jing-An harbors a personal dream of creating his own animated movie and has already produced numerous commercial animations for himself and various firms.</p>
                 <div class="images row justify-content-center">
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/sq1/sq_1.jpg">
-                        <source media="(max-width: 465px)" srcset="media/sq1/sq_1_m.jpg">
+                        <source media="(max-width: 650px)" srcset="media/sq1/sq_1_m.jpg">
+                        <source media="(max-width: 465px)" srcset="media/sq1/sq_1_s.jpg">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/sq1/sq_1_s.jpg" alt="">
+                            src="media/sq1/sq_1.jpg" alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/sq57/sq_57.jpg">
-                        <source media="(max-width: 465px)" srcset="media/sq57/sq_57_m.jpg">
+                        <source media="(max-width: 650px)" srcset="media/sq57/sq_57_m.jpg">
+                        <source media="(max-width: 465px)" srcset="media/sq57/sq_57_s.jpg">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/sq57/sq_57_s.jpg" alt="">
+                            src="media/sq57/sq_57.jpg" alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/other16/other_16.jpg">
-                        <source media="(max-width: 465px)" srcset="media/other16/other_16_m.jpg">
+                        <source media="(max-width: 650px)" srcset="media/other16/other_16_m.jpg">
+                        <source media="(max-width: 465px)" srcset="media/other16/other_16_s.jpg">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/other16/other_16_s.jpg" alt="">
+                            src="media/other16/other_16.jpg" alt="">
                     </picture>
                 </div>
             </div>
