--- a/all-jing-an.html
+++ b/all-jing-an.html
@@ -126,6 +126,10 @@
                 <p>Little did they know, Jing-An's first job was as a commercial photographer and social media manager for a disposable tableware firm called JFY Retailer. Despite limited resources—a cheap smartphone and basic tools—he transformed ordinary tableware into captivating commercial photos, marketing materials, and social media posts. Jing-An's success was undeniable! Today, he effortlessly creates stunning photos for any subject and continues to serve JFY Retailer as their contracted photographer.</p>
             </div>
         </div>
+        <!-- blank space -->
+        <div>
+            <span class="display-1">&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;</span>
+        </div>
     </main>
     <footer class="container m-3
     animate__animated animate__fadeIn animate__delay-1s">
