--- a/designer.html
+++ b/designer.html
@@ -181,17 +181,17 @@
                     <picture class="col-3">
                         <source media="(max-width: 650px)" srcset="media/sq49/sq_49_m.jpg">
                         <source media="(max-width: 465px)" srcset="media/sq49/sq_49_m.jpg, media/sq49/sq_49_s.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq49/sq_49.jpg" alt="">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq49/sq_49.jpg" alt="My sketch with marker">
                     </picture>
                     <picture class="col-3">
                         <source media="(max-width: 650px)" srcset="media/sq48/sq_48_m.jpg">
                         <source media="(max-width: 465px)" srcset="media/sq48/sq_48_m.jpg, media/sq48/sq_48_s.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq48/sq_48.jpg" alt="">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq48/sq_48.jpg" alt="My design sketch">
                     </picture>
                     <picture class="col-3">
                         <source media="(max-width: 650px)" srcset="media/sq44/sq_44_m.jpg">
                         <source media="(max-width: 465px)" srcset="media/sq44/sq_4s_m.jpg, media/sq44/sq_44_s.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq44/sq_44.jpg" alt="">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq44/sq_44.jpg" alt="My design sketch2">
                     </picture>
                 </div>
             </div>
@@ -210,19 +210,19 @@
                         <source media="(max-width: 650px)" srcset="media/m19_logo/m19_logo_m.jpg">
                         <source media="(max-width: 465px)" srcset="media/m19_logo/m19_logo_m.jpg, media/m19_logo/m19_logo_s.jpg">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/m19_logo/m19_logo.jpg"
-                            alt="">
+                            alt="Match19 logo">
                     </picture>
                     <picture class="col-3">
                         <source media="(max-width: 650px)" srcset="media/m19_life/m19_life_m.png">
                         <source media="(max-width: 465px)" srcset="media/m19_life/m19_life_m.png, media/m19_life/m19_life_s.png">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/m19_life/m19_life.png"
-                            alt="">
+                            alt="My coworker's birthday">
                     </picture>
                     <picture class="col-3">
                         <source media="(max-width: 650px)" srcset="media/m19_event/m19_event_m.png">
                         <source media="(max-width: 465px)" srcset="media/m19_event/m19_event_m.png, media/m19_event/m19_event_s.png">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/m19_event/m19_event.png"
-                            alt="">
+                            alt="Exhibtion of Match19">
                     </picture>
                 </div>
             </div>
@@ -241,19 +241,19 @@
                         <source media="(max-width: 650px)" srcset="media/sq14/sq_14_m.jpg">
                         <source media="(max-width: 465px)" srcset="media/sq14/sq_14_m.jpg">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq14/sq_14.jpg"
-                            alt="">
+                            alt="Capital E, a bag retailer">
                     </picture>
                     <picture class="col-3">
                         <source media="(max-width: 650px)" srcset="media/sq32/sq_32_m.jpg">
                         <source media="(max-width: 465px)" srcset="media/sq32/sq_32_m.jpg, media/sq32/sq_32_s.jpg">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq32/sq_32.jpg"
-                            alt="">
+                            alt="Golf Fun, a golf coach service company">
                     </picture>
                     <picture class="col-3">
                         <source media="(max-width: 650px)" srcset="media/sq56/sq_56_m.jpg">
                         <source media="(max-width: 465px)" srcset="media/sq56/sq_56_m.jpg, media/sq32/sq_32_s.jpg">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq56/sq_56.jpg"
-                            alt="">
+                            alt="JFY tableware, a tableware retailer">
                     </picture>
                 </div>
             </div>
@@ -273,19 +273,19 @@
                         <source media="(max-width: 650px)" srcset="media/sq37/sq_37_m.jpg">
                         <source media="(max-width: 465px)" srcset="media/sq37/sq_37_m.jpg, media/sq37/sq_37_s.jpg">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq37/sq_37.jpg"
-                            alt="">
+                            alt="My cart design">
                     </picture>
                     <picture class="col-3">
                         <source media="(max-width: 650px)" srcset="media/sq46/sq_46_m.jpg">
                         <source media="(max-width: 465px)" srcset="media/sq46/sq_46_m.jpg, media/sq46/sq_46_s.jpg">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq46/sq_46.jpg"
-                            alt="">
+                            alt="My wheelchair design">
                     </picture>
                     <picture class="col-3">
                         <source media="(max-width: 650px)" srcset="media/sq51/sq_51_m.jpg">
                         <source media="(max-width: 465px)" srcset="media/sq51/sq_51_m.jpg, media/sq51/sq_51_s.jpg">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq51/sq_51.jpg"
-                            alt="">
+                            alt="My merchandise design">
                     </picture>
                 </div>
             </div>
