--- a/developer.html
+++ b/developer.html
@@ -199,20 +199,20 @@
                     <picture class="col-3">
                         <source media="(max-width: 650px)" srcset="media/other5/other_5_m.jpg">
                         <source media="(max-width: 465px)" srcset="media/other5/other_5_m.jpg, media/other5/other_5_s.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/other5/other_5.jpg" alt="">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" onclick="window.open(`https://matchers.tw`)"
+                            src="media/other5/other_5.jpg" alt="matchers.tw">
                     </picture>
                     <picture class="col-3">
                         <source media="(max-width: 650px)" srcset="media/other6/other_6_m.jpg">
                         <source media="(max-width: 465px)" srcset="media/other6/other_6_m.jpg, media/other6/other_6_s.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/other6/other_6.jpg" alt="">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" onclick="window.open(`https://event.match19co.com/2023dragonboat_event`)"
+                            src="media/other6/other_6.jpg" alt="Match19 event website">
                     </picture>
                     <picture class="col-3">
                         <source media="(min-width: 650px)" srcset="media/figma/figma_m.png">
                         <source media="(min-width: 465px)" srcset="media/figma/figma_m.png, media/figma/figma_s.png">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/figma/figma.png" alt="">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" onclick="window.open(`https://yizixue.com.tw/`)"
+                            src="media/figma/figma.png" alt="Yizixue">
                     </picture>
                 </div>
             </div>
@@ -226,19 +226,19 @@
                         <source media="(max-width: 650px)" srcset="media/other13/other_13_m.jpg">
                         <source media="(max-width: 465px)" srcset="media/other13/other_13_s.jpg">
                         <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/other13/other_13.jpg" alt="">
+                            src="media/other13/other_13.jpg" alt="Just Belizz">
                     </picture>
                     <picture class="col-3">
                         <source media="(max-width: 650px)" srcset="media/other20/other_20_m.png">
                         <source media="(max-width: 465px)" srcset="media/other20/other_20_s.png">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/other20/other_20.png" alt="">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" onclick="window.open(`https://rk2.co/`)"
+                            src="media/other20/other_20.png" alt="RK2 motor">
                     </picture>
                     <picture class="col-3">
                         <source media="(max-width: 650px)" srcset="media/other21/other_21_m.png">
                         <source media="(max-width: 465px)" srcset="media/other21/other_21_s.png">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/other21/other_21.png" alt="">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" onclick="window.open(`http://jhlanddev.com.tw/`)"
+                            src="media/other21/other_21.png" alt="jhlanddev.com.tw">
                     </picture>
                 </div>
             </div>
@@ -251,20 +251,20 @@
                     <picture class="col-3">
                         <source media="(max-width: 650px)" srcset="media/other3/other_3_m.jpg">
                         <source media="(max-width: 465px)" srcset="media/other3/other_3_s.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/other3/other_3.jpg" alt="">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" onclick="window.open(`http://matchers.tw/`)"
+                            src="media/other3/other_3.jpg" alt="Matchers">
                     </picture>
                     <picture class="col-3">
                         <source media="(max-width: 650px)" srcset="media/m19co/m19co_m.png">
                         <source media="(max-width: 465px)" srcset="media/m19co/m19co_s.png">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/m19co/m19co.png" alt="">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" onclick="window.open(`https://match19co.com/`)"
+                            src="media/m19co/m19co.png" alt="Match19 e-commerce">
                     </picture>
                     <picture class="col-3">
                         <source media="(max-width: 650px)" srcset="media/m19bit/m19bit_m.png">
                         <source media="(max-width: 465px)" srcset="media/m19bit/m19bit_s.png">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/m19bit/m19bit.png" alt="">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" onclick="window.open(`https://id.newmatch19.com/`)"
+                            src="media/m19bit/m19bit.png" alt="Match19 8bit">
                     </picture>
                 </div>
             </div>
