--- a/hire.html
+++ b/hire.html
@@ -77,7 +77,7 @@
         </section>
         <svg id="happyBroccoli" class="animate__animated animate__fadeInUp animate__delay-1s" width="30rem" height="30rem" viewBox="0 0 300 300"></svg>
         <!-- creator list -->
-        <section class="w-100 d-flex flex-column align-items-center mt-5">
+        <section class="creatorList w-100 d-flex flex-column align-items-center mt-5">
             <h6 class="row">Thank you for enjoying this web-portfolio</h6>
             <p class="mt-3">Directed by: Jing-An Chen</p>
             <p class="mt-3">Written by: Jing-An Chen</p>
@@ -90,9 +90,9 @@
 
     <footer class="p-3">
         <button type="button" class="nes-btn" onclick="backHome()">Try Again</button>
-        <a class="col-6" href="https://webbroccoli.000.pe/?i=1">©2020-2024 Jing-An Chen. All rights reserved.</a>
+        <a class="col-md-3" href="https://webbroccoli.000.pe/?i=1">©2020-2024 Jing-An Chen. All rights reserved.</a>
         <!-- social icons -->
-        <div class="col-3 icon-list">
+        <div class="col-md-2 icon-list">
             <i class="nes-icon instagram is-middle" onclick="openIG()"></i>
             <i class="nes-icon linkedin is-middle" onclick="openLinkedIn()"></i>
             <i class="nes-icon whatsapp is-middle" onclick="openWhatsApp()"></i>
