--- a/photographer.html
+++ b/photographer.html
@@ -182,20 +182,20 @@
                     <picture class="col-3">
                         <source media="(max-width: 650px)" srcset="media/sq56/sq_56_m.jpg">
                         <source media="(max-width: 465px)" srcset="media/sq56/sq_56_s.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/sq56/sq_56.jpg" alt="">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" onclick="window.open(`https://broccolidesign.myportfolio.com/commercial-photo`)"
+                            src="media/sq56/sq_56.jpg" alt="Commercial photos">
                     </picture>
                     <picture class="col-3">
                         <source media="(max-width: 650px)" srcset="media/sq24/sq_24_m.jpg">
                         <source media="(max-width: 465px)" srcset="media/sq24/sq_24_s.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/sq24/sq_24.jpg" alt="">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" onclick="window.open(`https://broccolidesign.myportfolio.com/commercial-photo`)"
+                            src="media/sq24/sq_24.jpg" alt="Commercial photos">
                     </picture>
                     <picture class="col-3">
                         <source media="(max-width: 650px)" srcset="media/sq22/sq_22_m.jpg">
                         <source media="(max-width: 465px)" srcset="media/sq22/sq_22_s.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/sq22/sq_22.jpg" alt="">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" onclick="window.open(`https://broccolidesign.myportfolio.com/commercial-photo`)"
+                            src="media/sq22/sq_22.jpg" alt="Commercial photos">
                     </picture>
                 </div>
             </div>
@@ -208,20 +208,20 @@
                     <picture class="col-3">
                         <source media="(max-width: 650px)" srcset="media/sq6/sq_6_m.jpg">
                         <source media="(max-width: 465px)" srcset="media/sq6/sq_6_s.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/sq6/sq_6.jpg" alt="">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" onclick="window.open(`https://broccolidesign.myportfolio.com/free-albums`)"
+                            src="media/sq6/sq_6.jpg" alt="Free photos">
                     </picture>
                     <picture class="col-3">
                         <source media="(max-width: 650px)" srcset="media/sq4/sq_4_m.jpg">
                         <source media="(max-width: 465px)" srcset="media/sq4/sq_4_s.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/sq4/sq_4.jpg" alt="">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" onclick="window.open(`https://broccolidesign.myportfolio.com/free-albums`)"
+                            src="media/sq4/sq_4.jpg" alt="Free photos">
                     </picture>
                     <picture class="col-3">
                         <source media="(max-width: 650px)" srcset="media/other22/other_22_m.png">
                         <source media="(max-width: 465px)" srcset="media/other22/other_22_s.png">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/other22/other_22.png" alt="">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" onclick="window.open(`https://broccolidesign.myportfolio.com/free-albums`)"
+                            src="media/other22/other_22.png" alt="Free photos">
                     </picture>
                 </div>
             </div>
@@ -234,20 +234,20 @@
                     <picture class="col-3">
                         <source media="(max-width: 650px)" srcset="media/sq1/sq_1_m.jpg">
                         <source media="(max-width: 465px)" srcset="media/sq1/sq_1_s.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/sq1/sq_1.jpg" alt="">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" onclick="window.open(`https://youtu.be/9NPmk7pX84Q?si=wIzOi1NUFhzuWkyS`)"
+                            src="media/sq1/sq_1.jpg" alt="Film Production">
                     </picture>
                     <picture class="col-3">
                         <source media="(max-width: 650px)" srcset="media/sq57/sq_57_m.jpg">
                         <source media="(max-width: 465px)" srcset="media/sq57/sq_57_s.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/sq57/sq_57.jpg" alt="">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" onclick="window.open(`https://youtu.be/ZsY1YQITBJo?si=bRCnC7fjRH-UEjVR`)"
+                            src="media/sq57/sq_57.jpg" alt="Film Production">
                     </picture>
                     <picture class="col-3">
                         <source media="(max-width: 650px)" srcset="media/other16/other_16_m.jpg">
                         <source media="(max-width: 465px)" srcset="media/other16/other_16_s.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/other16/other_16.jpg" alt="">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" onclick="window.open(`https://zh.wikipedia.org/wiki/%E8%80%81%E5%A7%91%E5%A9%86%E7%9A%84%E5%8F%A4%E8%91%A3%E8%80%81%E8%8F%9C%E5%96%AE`)"
+                            src="media/other16/other_16.jpg" alt="Film Production">
                     </picture>
                 </div>
             </div>
