--- a/index.html
+++ b/index.html
@@ -119,14 +119,14 @@
     </main>
     <footer class="container m-3
     animate__animated animate__fadeIn animate__delay-1s">
-        <a class="col-6 link" href="https://webbroccoli.000.pe/?i=1">©2020-2024 Jing-An Chen. All rights reserved.</a>
+        <a class="col-md-6 link" href="https://webbroccoli.000.pe/?i=1">©2020-2024 Jing-An Chen. All rights reserved.</a>
         <!-- social icons -->
-        <div class="col-3 icon-list">
+        <div class="col-md-3 icon-list">
             <i class="nes-icon instagram is-middle" onclick="openIG()"></i>
             <i class="nes-icon linkedin is-middle" onclick="openLinkedIn()"></i>
             <i class="nes-icon whatsapp is-middle" onclick="openWhatsApp()"></i>
         </div>
-        <a class="col link" href="all-jing-an.html">I want all of them >></a>
+        <a class="col-md-2 link" href="all-jing-an.html">I want all of them >></a>
         <!-- bootstrap js -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
